--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -40,11 +40,56 @@ html(lang='en')
     link(rel='icon', type='image/png', sizes='16x16', href=require('images/favicons/favicon-16x16.png'))
     link(rel='shortcut icon', href=require('images/favicons/favicon.ico'))
 
-    //- Preload fonts
-    link(type='font/woff', href=require('source/assets/fonts/Quicksand-Bold.woff'), rel='preload', as='font', crossorigin)
-    link(type='font/woff', href=require('source/assets/fonts/Quicksand-Medium.woff'), rel='preload', as='font', crossorigin)
-    link(type='font/woff', href=require('source/assets/fonts/Quicksand-Regular.woff'), rel='preload', as='font', crossorigin)
-    link(type='font/woff', href=require('source/assets/fonts/Quicksand-Light.woff'), rel='preload', as='font', crossorigin)
+    link(rel='stylesheet', href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/swiper.min.css?165847167919773')
+    link(rel='stylesheet', href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/bootstrap_v4.css?1658471679154998')
+    link(rel='stylesheet', href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/template_styles.css?1659209773219687')
+
+    link(href='http://a17midfk.beget.tech/bitrix/css/main/font-awesome.css?165847107728777' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/js/ui/fonts/opensans/ui.font.opensans.css?16592098932555' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/js/main/popup/dist/main.popup.bundle.css?165847131228019' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/news.list/slider/style.css?16597809225385' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/news.list/advantage/style.css?1658471679162' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/catalog.section/product-slider/style.css?16584716793642' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/catalog.item/product-item/style.css?165847167927835' type='text/css' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/owl.carousel.css?16584716794878' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/swiper.min.css?165847167919773' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/bootstrap_v4.css?1658471679154998' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/slick.css?165847167915516' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/font-awesome.css?165847167930673' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/css/animsition.min.css?165847167929627' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/sale.basket.basket.line/top_cart/style.css?16584716794718' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/system.auth.form/top_auth/style.css?1658471679443' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/menu/top_menu/style.css?165847167910890' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/menu/bottom/style.css?1658471679581' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/search.title/main/style.css?16584716791188' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/styles.css?16584716791435' type='text/css' data-template-style='true' rel='stylesheet')
+    link(href='http://a17midfk.beget.tech/bitrix/templates/cosmetics/template_styles.css?1659209773219687' type='text/css' data-template-style='true' rel='stylesheet')
+
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/main/core/core.js?1658471312478527')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/pull/protobuf/protobuf.js?1658471091274055')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/pull/protobuf/model.js?165847109170928')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/main/core/core_promise.js?16584710755220')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/rest/client/rest.client.js?165847109317414')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/pull/client/pull.client.js?165847131670481')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/main/popup/dist/main.popup.bundle.js?1658471312113772')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/currency/currency-core/dist/currency-core.bundle.js?16584710825396')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/js/currency/core_currency.js?16584710821141')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/jquery-3.2.1_min.js?165847167986663')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/owl.carousel.js?165847167946330')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/jquery.cookie.js?16584716798561')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/bootstrap.min.js?165847167937192')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/jquery.fancybox.js?165847167959042')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/slick.js?165847167942515')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/animsition.min.js?16584716795355')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/swiper.min.js?1658471679122735')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/js/script.js?16584716799603')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/sale.basket.basket.line/top_cart/script.js?16584716795796')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/menu/top_menu/script.js?1658471679246')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/components/bitrix/search.title/script.js?16584710969847')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/news.list/advantage/script.js?1658471679198')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/catalog.section/product-slider/script.js?16584716797950')
+    script(type='text/javascript' src='http://a17midfk.beget.tech/bitrix/templates/cosmetics/components/bitrix/catalog.item/product-item/script.js?165847167966985')
+
 
     //- Title
     block title
@@ -56,15 +101,12 @@ html(lang='en')
       meta(name='msapplication-config' content='./browserconfig.xml')
 
   body
+    // mixins
+    include ../mixins/tovar-block-item
 
-    //- Menu
-    include ../components/menu.pug
 
     //- block content
     block content
-
-    //- Footer
-    include ../components/footer.pug
 
     //- block scripts
     block scripts
