--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -1,5 +1,3 @@
-@import 'normalize.css';
-
 /*
   Base
 */
@@ -8,28 +6,19 @@
 /*
   Utils
 */
-@import './utils/dimensions';
+
 @import './utils/mixins';
-@import './utils/colors';
-@import './utils/keyframes';
+@import './utils/variables';
 
 /*
   Components
 */
-@import './components/footer';
 @import './components/button';
 @import './components/link';
-@import './components/_menu';
 
 /*
   Layout
 */
+@import './layout/new-design';
 @import './layout/page';
-@import './layout/general';
 
-/*
-  Pages
-*/
-@import './pages/index';
-@import './pages/blog';
-@import './pages/contact';
