--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -1,31 +1,141 @@
 /* src/assets/styles/base/_fonts.scss  */
 
-/*
-  Quicksand
-*/
-
 @font-face {
-  font-family: 'Quicksand';
-  font-weight: 700;
-  src: url('@~fonts/Quicksand-Bold.woff');
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Regular.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Quicksand';
-  font-weight: 500;
-  src: url('@~fonts/Quicksand-Medium.woff');
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-ExtraboldItalic.woff');
+  font-weight: 800;
+  font-style: italic;
 }
 
 @font-face {
-  font-family: 'Quicksand';
-  font-weight: 400;
-  src: url('@~fonts/Quicksand-Regular.woff');
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Bold.woff');
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'Quicksand';
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Black.woff');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Light.woff');
   font-weight: 300;
-  src: url('@~fonts/Quicksand-Light.woff');
+  font-style: normal;
 }
 
-$quicksand: 'Quicksand', sans-serif;
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Semibold.woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Medium.woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-MediumItalic.woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-BlackItalic.woff');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-UltraLight.woff');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-RegularItalic.woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-SemiboldItalic.woff');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-HeavyItalic.woff');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Extrabold.woff');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-BoldItalic.woff');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-UltraLightItalic.woff');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-LightItalic.woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Heavy.woff');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-Thin.woff');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('@~fonts/Gilroy-ThinItalic.woff');
+  font-weight: 100;
+  font-style: italic;
+}
