--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,9 +9,9 @@ block manifestBrowserconfigFiles
 
 block content
 
-  // Menu
-  +menu('home')
-
   //- Index page
   section.page.home__page
-    h1.page__title # Index page
+    h1
+      a(href="/franchise").page__title franchise
+    h1
+      a(href="/manufacturing").page__title manufacturing
