--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -1,6 +1,7 @@
 $color-one: #4F616B;
 $color-one-light: #8E8E8E;
 $color-two: #53C1B1;
+$color-thee: #4F616B;
 $color-white: #fff;
 $color-ace: #F3F3F3;
 
