--- a/src/views/mixins/tovar-block-item.pug
+++ b/src/views/mixins/tovar-block-item.pug
@@ -3,7 +3,7 @@ mixin tovar-block-item(img, title)
     .tovar-block__item-img
       img(src=img)
     .tovar-block__item-box
-      .tovar-block__item-title
+      a(href="#").tovar-block__item-title
         p=title
         .tovar-block__item-arrow
       .tovar-block__item-del
