--- a/src/views/pages/franchise.pug
+++ b/src/views/pages/franchise.pug
@@ -36,8 +36,8 @@ block content
                 p!="Отсутствие<br>роялти"
               .slide-block__benefits-item
                 p!="Окупаемость<br>от 3 месяцев"
-    .wrapper-inner
-      .about-block
+    .about-block
+      .wrapper-inner
         .row
           .col-12
             h2!="“Полоскун”- это сеть магазинов эко<br> моющих средств отечественного<br> производства на розлив"
@@ -106,8 +106,8 @@ block content
               .franch-block__item-text
                 p!="<span>прибыль</span> за год<br>"
                   span от 2 000 000 р
-    .wrapper-inner
-      .fact-block
+    .fact-block
+      .wrapper-inner
         .fact-block__box
           .fact-block__item
             p!="01 - Финансовая модель, <span>в которой прописано все</span>"
@@ -129,8 +129,8 @@ block content
             p!="09 - <span>База знаний</span> с описанием бизнес процессов, стандартов и кейсов"
           .fact-block__item
             p!="10 - <span>Партнеры —</span> самые крепкие звенья нашей сети "
-    .wrapper-inner
-      .tovar-block
+    .tovar-block
+      .wrapper-inner
         .row
           .col-12.tovar-block__title
             h2 БОЛЕЕ 50 РАЗЛИЧНЫХ ТОВАРНЫХ НАИМЕНОВАНИЙ
@@ -143,3 +143,74 @@ block content
           +tovar-block-item(require('images/tovar/item-01.png'), 'КОНДИЦИОНЕРЫ ДЛЯ БЕЛЬЯ')
           +tovar-block-item(require('images/tovar/item-01.png'), 'СРЕДСТВА ДЛЯ УБОРКИ')
           +tovar-block-item(require('images/tovar/item-01.png'), 'КОСМЕТИЧЕСКИЕ СРЕДСТВА')
+    .why-block
+      .wrapper-inner
+        .row
+          .col-12.col-md-4.offset-md-4
+            h2 ПОЧЕМУ КЛИЕНТ ПРИДЕТ К ВАМ?
+          .col-12.col-md-4
+            .why-block__item
+              .why-block__icon
+                img(src=require('images/icons/check.svg'))
+              .why-block__text
+                p!="Возможность приобретения гипоаллергенных товаров <span>премиум качества по справедливым ценам</span>"
+            .why-block__item
+              .why-block__icon
+                img(src=require('images/icons/check.svg'))
+              .why-block__text
+                p!="<span>Стабильное качество продукта,</span> гарантированное производителем"
+            .why-block__item
+              .why-block__icon
+                img(src=require('images/icons/check.svg'))
+              .why-block__text
+                p!="<span>Изготовление новых продуктов,</span> ориентируясь на мнение клиентов"
+            .why-block__item
+              .why-block__icon
+                img(src=require('images/icons/check.svg'))
+              .why-block__text
+                p!="<span>Продукт без переплаты за упаковку и бренд</span> (упаковка, как правило, составляет до 50% стоимости продукта)"
+            .why-block__item
+              .why-block__icon
+                img(src=require('images/icons/check.svg'))
+              .why-block__text
+                p!="Покупка <span>напрямую с завода - изготовителя</span>"
+    .contact-block
+      .wrapper-inner
+        .row
+          .col-12.col-md-6
+            h2 ХОТИТЕ ОТКРЫТЬ МАГАЗИН “ПОЛОСКУН” В ВАШЕМ ГОРОДЕ, СТАВ НАШИМ ПАРТНЕРОМ?
+            .contact-block__manager
+              .contact-block__avatar
+                img(src=require('images/avatar.png'))
+              .contact-block__text
+                p Оставьте заявку и наш специалист свяжется с вами в ближайшее время, чтобы ответить на все интересуещие вас вопросы
+          .col-12.col-md-6
+            form.contact-block__form
+              .contact-block__input-group
+                input(placeholder="Ваше имя" type="text")
+                img(src=require('images/icons/icon-name.svg'))
+              .contact-block__input-group
+                input(placeholder="Ваш город" type="text")
+                img(src=require('images/icons/icon-phone.svg'))
+              .contact-block__input-group
+                input(placeholder="+ 7(__)-___-__-__" type="text")
+                img(src=require('images/icons/icon-phone.svg'))
+              .contact-block__input-group.contact-block__input-group-text
+                textarea(placeholder="Текст сообщения")
+                img(src=require('images/icons/icon-text.svg'))
+              .contact-block__input-group
+                input(placeholder="Электронная почта" type="email")
+                img(src=require('images/icons/icon-mail.svg'))
+              .contact-block__input-group
+                p Подходящее время для звонка (по МСК)
+              .contact-block__input-group.contact-block__input-group-select
+                select
+                  option(value="с 9:00 до 12:00") с 9:00 до 12:00
+                  option(value="с 12:00 до 14:00") с 12:00 до 14:00
+                  option(value="с 14:00 до 18:00") с 14:00 до 18:00
+                img(src=require('images/icons/icon-arrow-down.svg'))
+              .contact-block__input-group
+                button.new-design__button отправить заявку
+              .contact-block__input-group.contact-block__input-group-check
+                input(id="checkboxid" name="checkboxid" type="checkbox")
+                label(for="checkboxid") Даю согласие  на обоаботку персональных данных
