--- a/src/views/pages/franchise.pug
+++ b/src/views/pages/franchise.pug
@@ -146,9 +146,9 @@ block content
     .why-block
       .wrapper-inner
         .row
-          .col-12.col-md-4.offset-md-4
+          .col-12.col-lg-4.offset-lg-4
             h2 ПОЧЕМУ КЛИЕНТ ПРИДЕТ К ВАМ?
-          .col-12.col-md-4
+          .col-12.col-lg-4
             .why-block__item
               .why-block__icon
                 img(src=require('images/icons/check.svg'))
@@ -177,14 +177,14 @@ block content
     .contact-block
       .wrapper-inner
         .row
-          .col-12.col-md-6
+          .col-12.col-lg-6
             h2 ХОТИТЕ ОТКРЫТЬ МАГАЗИН “ПОЛОСКУН” В ВАШЕМ ГОРОДЕ, СТАВ НАШИМ ПАРТНЕРОМ?
             .contact-block__manager
               .contact-block__avatar
                 img(src=require('images/avatar.png'))
               .contact-block__text
                 p Оставьте заявку и наш специалист свяжется с вами в ближайшее время, чтобы ответить на все интересуещие вас вопросы
-          .col-12.col-md-6
+          .col-12.col-lg-6
             form.contact-block__form
               .contact-block__input-group
                 input(placeholder="Ваше имя" type="text")
