--- a/src/assets/styles/layout/_page.scss
+++ b/src/assets/styles/layout/_page.scss
@@ -284,7 +284,7 @@
     ". . . . ."
     ". . . . .";
 
-    @media (max-width: 767px) {
+    @media (max-width: 768px) {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
       grid-template-areas:
@@ -327,7 +327,7 @@
       border-bottom: none;
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 768px) {
       border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
       border-right: 1px solid rgba(0, 0, 0, 0.1) !important;
 
@@ -474,7 +474,19 @@
         font-weight: 600;
       }
     }
+  }
 
+  @media (max-width: 768px) {
+    padding: 40px 0 70vw;
+    background-image: url("@~images/why-bg-mobile.png");
+
+    h2 {
+      margin-bottom: 40px;
+    }
+
+    .wrapper-inner {
+      transform: translateY(0);
+    }
   }
 }
 
@@ -488,6 +500,10 @@
   &__manager {
     display: flex;
     align-items: flex-end;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
   }
 
   &__avatar {
@@ -516,6 +532,11 @@
     ". text"
     ". ."
     ". .";
+
+    @media (max-width: 767px) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__input-group {
