--- a/src/assets/styles/layout/_page.scss
+++ b/src/assets/styles/layout/_page.scss
@@ -284,7 +284,7 @@
     ". . . . ."
     ". . . . .";
 
-    @media (max-width: 768px) {
+    @media (max-width: 991px) {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
       grid-template-areas:
@@ -327,7 +327,7 @@
       border-bottom: none;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 991px) {
       border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
       border-right: 1px solid rgba(0, 0, 0, 0.1) !important;
 
@@ -367,6 +367,8 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    flex: 0 0 25%;
+    max-width: 25%;
 
     &:nth-child(-n+3) {
       flex: 0 0 33.333333%;
@@ -501,6 +503,10 @@
     display: flex;
     align-items: flex-end;
 
+    @media (max-width: 991px) {
+      margin-bottom: 30px;
+    }
+
     @media (max-width: 767px) {
       flex-direction: column;
     }
@@ -509,6 +515,7 @@
   &__avatar {
     width: 176px;
     flex-shrink: 0;
+    display: flex;
   }
 
   &__text {
@@ -551,6 +558,7 @@
     input, textarea, select {
       padding: 26px 32px;
       width: 100%;
+      height: 100%;
       font-family: $gilroy;
       font-style: normal;
       font-weight: 300;
