--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -1,24 +1,25 @@
 /*
+  Utils
+*/
+@import './utils/mixins';
+@import './utils/variables';
+@import './utils/responsive';
+
+/*
   Base
 */
 @import './base/fonts';
-
-/*
-  Utils
-*/
-
-@import './utils/mixins';
-@import './utils/variables';
+@import './base/new-design';
 
 /*
   Components
 */
 @import './components/button';
 @import './components/link';
+@import './components/tabs';
 
 /*
   Layout
 */
-@import './layout/new-design';
 @import './layout/page';
 
