--- a/src/views/pages/franchise.pug
+++ b/src/views/pages/franchise.pug
@@ -138,7 +138,7 @@ block content
         .row
           +tovar-block-item(require('images/tovar/item-01.png'), 'ГЕЛИ ДЛЯ ДУША')
           +tovar-block-item(require('images/tovar/item-01.png'), 'КРЕМ-МЫЛО')
-          +tovar-block-item(require('images/tovar/item-01.png'), 'СРЕДСТВа ДЛЯ  авпваи МЫТЬЯ ПОСУДЫ')
+          +tovar-block-item(require('images/tovar/item-01.png'), 'СРЕДСТВа ДЛЯ МЫТЬЯ ПОСУДЫ')
           +tovar-block-item(require('images/tovar/item-01.png'), 'ГЕЛИ ДЛЯ СТИРКИ')
           +tovar-block-item(require('images/tovar/item-01.png'), 'КОНДИЦИОНЕРЫ ДЛЯ БЕЛЬЯ')
           +tovar-block-item(require('images/tovar/item-01.png'), 'СРЕДСТВА ДЛЯ УБОРКИ')
@@ -174,43 +174,5 @@ block content
                 img(src=require('images/icons/check.svg'))
               .why-block__text
                 p!="Покупка <span>напрямую с завода - изготовителя</span>"
-    .contact-block
-      .wrapper-inner
-        .row
-          .col-12.col-lg-6
-            h2 ХОТИТЕ ОТКРЫТЬ МАГАЗИН “ПОЛОСКУН” В ВАШЕМ ГОРОДЕ, СТАВ НАШИМ ПАРТНЕРОМ?
-            .contact-block__manager
-              .contact-block__avatar
-                img(src=require('images/avatar.png'))
-              .contact-block__text
-                p Оставьте заявку и наш специалист свяжется с вами в ближайшее время, чтобы ответить на все интересуещие вас вопросы
-          .col-12.col-lg-6
-            form.contact-block__form
-              .contact-block__input-group
-                input(placeholder="Ваше имя" type="text")
-                img(src=require('images/icons/icon-name.svg'))
-              .contact-block__input-group
-                input(placeholder="Ваш город" type="text")
-                img(src=require('images/icons/icon-phone.svg'))
-              .contact-block__input-group
-                input(placeholder="+ 7(__)-___-__-__" type="text")
-                img(src=require('images/icons/icon-phone.svg'))
-              .contact-block__input-group.contact-block__input-group-text
-                textarea(placeholder="Текст сообщения")
-                img(src=require('images/icons/icon-text.svg'))
-              .contact-block__input-group
-                input(placeholder="Электронная почта" type="email")
-                img(src=require('images/icons/icon-mail.svg'))
-              .contact-block__input-group
-                p Подходящее время для звонка (по МСК)
-              .contact-block__input-group.contact-block__input-group-select
-                select
-                  option(value="с 9:00 до 12:00") с 9:00 до 12:00
-                  option(value="с 12:00 до 14:00") с 12:00 до 14:00
-                  option(value="с 14:00 до 18:00") с 14:00 до 18:00
-                img(src=require('images/icons/icon-arrow-down.svg'))
-              .contact-block__input-group
-                button.new-design__button отправить заявку
-              .contact-block__input-group.contact-block__input-group-check
-                input(id="checkboxid" name="checkboxid" type="checkbox")
-                label(for="checkboxid") Даю согласие  на обоаботку персональных данных
+
+    include ../components/contact-block
